# mini-ci-test-suite

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/app/: math_ops.py
test-results/: junit.xml
tests/: conftest.py  test_math_ops.py
