[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I"]     # cơ bản: lỗi cú pháp, import, định dạng
exclude = ["dist","build",".venv"]

[project]
name = "mini-ci-test-suite"
version = "0.1.0"            # tạm; sẽ đồng bộ với tag khi phát hành
description = "Sample project for CI + Test Suite (GitHub Actions)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name="Nguyen Tien Hoang", email="you@example.com" }]
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"